data/all_generated_tests/raw_wast_tests/unreachable_UnreachableCodeExecution_1048.wast
;; 9. **Unreachable with Complex Control Flow:**    - **Description:** Integrate `unreachable` within a complex combination of blocks, loops, and conditional branches to ensure it correctly causes a trap without being bypassed.    - **Constraint:** Verifies complex flow handling.    - **Relation to Unreachable Code Execution:** Tests the robustness of control flow management reaching `unreachable`.

(assert_invalid
  (module
    (func
      (block
        (loop
          (block
            (br_if 0 (i32.eq (i32.const 1) (i32.const 1)))
            (unreachable)
          )
          (unreachable)
        )
        (unreachable)
      )
      (i32.const 0)
    )
  )
  "type mismatch"
)